# figma-mcpxer

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/skills/senior-python-dev/: README.md  SKILL.md
.claude/skills/senior-python-dev/phases/: 01-context-analysis.md  02-solution-design.md  03-implementation.md  04-testing.md  05-documentation.md
.claude/skills/senior-python-dev/specs/: coding-standards.md  quality-standards.md
.claude/skills/senior-python-dev/templates/: docker-setup.md  python-service.md
src/figma_mcpxer/: __init__.py  __main__.py  config.py  exceptions.py  metrics.py  server.py
src/figma_mcpxer/cache/: redis_store.py  store.py
src/figma_mcpxer/figma/: client.py  models.py
src/figma_mcpxer/middleware/: logging.py  rate_limit.py
src/figma_mcpxer/tools/: codegen.py  collaboration.py  components.py  file.py  layout.py  registry.py  shared.py  tokens.py  webhooks.py
src/figma_mcpxer/utils/: css.py  tokens.py  url.py
src/figma_mcpxer/webhooks/: handler.py
tests/: conftest.py
tests/integration/: test_figma_api.py
tests/unit/: test_cache_store.py  test_css_utils.py  test_figma_client.py  test_file_tools.py  test_phase3_tools.py  test_phase4_tools.py  test_phase5_tools.py  test_phase6_tools.py  test_phase7_tools.py  test_phase8_webhooks.py  test_phase9_infra.py  test_token_utils.py  test_url_utils.py
