[project]
name = "figma-mcpxer"
version = "0.1.0"
description = "Remote MCP server exposing full Figma API as tools for LLM agents"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "starlette>=0.41",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anyio>=4.0",
    # Phase 9 — Production Hardening
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
redis = [
    "redis[asyncio]>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "fakeredis[aioredis]>=2.20",
]

[project.scripts]
figma-mcpxer = "figma_mcpxer.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
